--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Recast.ly - Recast Yourself</title>
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles/style.css">
+  <script src=compiled/src/config/youtube.js></script>
   <script src="node_modules/jquery/dist/jquery.js"></script>
   <script src="node_modules/react/dist/react.js"></script>
   <script src="node_modules/react-dom/dist/react-dom.js"></script>
@@ -13,6 +14,8 @@
 </head>
 <body>
   <div id="app"></div>
+  <script src="compiled/src/data/exampleVideoData.js"></script>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
   <script src="compiled/src/components/VideoPlayer.js"></script>
