--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
   <div id="app"></div>
   <script src="compiled/src/data/exampleVideoData.js"></script>
   <script src="compiled/src/lib/searchYouTube.js"></script>
+  <script src="compiled/src/lib/getComments.js"></script>
   <script src="compiled/src/components/VideoListEntry.js"></script>
   <script src="compiled/src/components/VideoList.js"></script>
+  <script src="compiled/src/components/Comment.js"></script>
+  <script src="compiled/src/components/CommentList.js"></script>
   <script src="compiled/src/components/VideoPlayer.js"></script>
   <script src="compiled/src/components/Nav.js"></script>
   <script src="compiled/src/components/Search.js"></script>
