--- a/index.html
+++ b/index.html
@@ -15,16 +15,6 @@
 <body>
   <div id="app"></div>
   <script src="compiled/src/data/exampleVideoData.js"></script>
-  <script src="compiled/src/lib/searchYouTube.js"></script>
-  <script src="compiled/src/lib/getComments.js"></script>
-  <script src="compiled/src/components/VideoListEntry.js"></script>
-  <script src="compiled/src/components/VideoList.js"></script>
-  <script src="compiled/src/components/Comment.js"></script>
-  <script src="compiled/src/components/CommentList.js"></script>
-  <script src="compiled/src/components/VideoPlayer.js"></script>
-  <script src="compiled/src/components/Nav.js"></script>
-  <script src="compiled/src/components/Search.js"></script>
-  <script src="compiled/src/components/App.js"></script>
-  <script src="compiled/src/index.js"></script>
+  <script src="compiled/bundle.js"></script>
 </body>
 </html>
